--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: "Yanone Kaffeesatz", sans-serif;
+    font-family: "Cabin", sans-serif;
 }
 
 /* Hero Section */
@@ -18,7 +18,8 @@
         #f37335,
         #fdc830
     ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    padding: 0 0 500px 0;
+    height: 100vh;
+    padding-bottom: 10vh;
 }
 
 .hero__container {
@@ -28,7 +29,7 @@
     align-items: center;
     max-width: 1200px;
     margin: 0 auto;
-    height: 90%;
+    height: 90vh;
     text-align: center;
     padding: 30px;
 }
@@ -62,6 +63,16 @@
 
     font-size: 40px;
     color: #131313;
+}
+
+@media screen and (max-width: 768px) {
+    .hero__heading {
+        font-size: 80px;
+    }
+
+    .hero__main_description {
+        font-size: 25px;
+    }
 }
 
 .hero__button {
@@ -123,56 +134,36 @@
 /* Footer Section */
 .footer__container {
     background-color: #131313;
+    padding-top: 10vh;
     padding: 4rem 0;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
 }
 
-#footer__logo {
-    color: #fff;
+.footer__container ul {
     display: flex;
-    align-items: center;
-    cursor: pointer;
+    padding: 0;
+    list-style: none;
+    text-align: center;
+    font-size: 18px;
+    line-height: 1.6;
+    margin-bottom: 0;
+    color: #fff;
+}
+
+.footer__container li {
+    padding: 0 10px;
+}
+
+.footer__container ul a {
+    color: inherit;
     text-decoration: none;
-    font-size: 2rem;
+    opacity: 0.8;
 }
 
-.footer__links {
-    width: 100%;
-    max-width: 1000px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.footer__link--wrapper {
-    display: flex;
-}
-
-.footer__link--items {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin: 16px;
-    text-align: left;
-    width: 160px;
-    box-sizing: border-box;
-}
-
-.footer__link--items h2 {
-    margin-bottom: 16px;
-    color: #fff;
-}
-
-.footer__link--items a {
-    color: #fff;
-    text-decoration: none;
-    margin-bottom: 0.5rem;
-}
-
-.footer__link--items a:hover {
+.footer__container ul a:hover {
     color: #f37335;
     transition: 0.3 ease-out;
 }
