--- a/styles.css
+++ b/styles.css
@@ -5,22 +5,68 @@
     font-family: "Cabin", sans-serif;
 }
 
+:root {
+    --photoIcon: url("./images/photo.jpg");
+
+    --mainGradientLeftColor: #f37335;
+    --mainGradientRightColor: #fdc830;
+}
+
+.animemode {
+    --photoIcon: url("./images/jojo.png");
+
+    --mainGradientLeftColor: #8e2de2;
+    --mainGradientRightColor: #4a00e0;
+}
+
 /* Hero Section */
 .hero {
     background: #fdc830; /* fallback for old browsers */
     background: -webkit-linear-gradient(
         to right,
-        #f37335,
-        #fdc830
+        var(--mainGradientLeftColor),
+        var(--mainGradientRightColor)
     ); /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(
         to right,
-        #f37335,
-        #fdc830
+        var(--mainGradientLeftColor),
+        var(--mainGradientRightColor)
     ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     height: 100vh;
     padding-bottom: 10vh;
 }
+
+/* Header */
+
+.header__container {
+    display: flex;
+    justify-content: space-between;
+    height: 30px;
+    z-index: 1;
+    width: 100%;
+    max-width: 1300px;
+    margin: 0 auto;
+    padding: 0 50px;
+}
+
+.animemode-toggle {
+    background: var(--photoIcon);
+    background-size: 30px 30px;
+    display: flex;
+    align-items: right;
+    width: 30px;
+    height: 30px;
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 50%;
+    border-width: 2px;
+    border-style: solid;
+    border-color: #fff;
+
+    cursor: pointer;
+}
+
+/* Headerend */
 
 .hero__container {
     display: flex;
@@ -34,15 +80,18 @@
     padding: 30px;
 }
 
-#photo {
+.photo {
+    background: var(--photoIcon);
+    background-size: 500px 500px;
     display: flex;
     align-items: center;
     width: 500px;
+    height: 500px;
     max-width: 100%;
     max-height: 100%;
     margin-bottom: 50px;
     margin-top: 20px;
-    border-radius: 250px;
+    border-radius: 50%;
     border-width: 10px;
     border-style: solid;
     border-color: #fff;
@@ -80,13 +129,13 @@
     background: #00f260; /* fallback for old browsers */
     background: -webkit-linear-gradient(
         to right,
-        #0575e6,
-        #00f260
+        #f953c6,
+        #b91d73
     ); /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(
         to right,
-        #0575e6,
-        #00f260
+        #f953c6,
+        #b91d73
     ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
     padding: 20px 60px;
