--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@
 }
 
 /* Hero Section */
+
 .hero {
     background: #fdc830; /* fallback for old browsers */
     background: -webkit-linear-gradient(
@@ -32,75 +33,74 @@
         var(--mainGradientLeftColor),
         var(--mainGradientRightColor)
     ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    height: 100vh;
-    padding-bottom: 10vh;
+
+    display: flex;
+    flex-direction: column;
 }
 
 /* Header */
 
 .header__container {
     display: flex;
-    justify-content: space-between;
-    height: 30px;
-    z-index: 1;
+    flex-direction: row;
+    justify-content: flex-end;
+    height: 34px;
     width: 100%;
-    max-width: 1300px;
-    margin: 0 auto;
-    padding: 0 50px;
 }
 
 .animemode-toggle {
     background: var(--photoIcon);
     background-size: 30px 30px;
-    display: flex;
-    align-items: right;
+
     width: 30px;
     height: 30px;
-    max-width: 100%;
-    max-height: 100%;
+
     border-radius: 50%;
     border-width: 2px;
     border-style: solid;
     border-color: #fff;
 
+    margin-top: 10px;
+    margin-right: 10px;
+
     cursor: pointer;
 }
-
 /* Headerend */
 
 .hero__container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    max-width: 1200px;
-    margin: 0 auto;
-    height: 90vh;
-    text-align: center;
-    padding: 30px;
 }
 
 .photo {
     background: var(--photoIcon);
+    /* making sure the image is centered */
+    background-position: center;
+    /* making sure the image can be seen */
     background-size: 500px 500px;
-    display: flex;
-    align-items: center;
+
     width: 500px;
     height: 500px;
-    max-width: 100%;
-    max-height: 100%;
-    margin-bottom: 50px;
+    /* for mobile or if screen to narrow for 500px*/
+    max-width: 100vw;
+    max-height: 100vw;
+
+    /* leaving space on top of the image */
     margin-top: 20px;
+
+    /* circle image */
     border-radius: 50%;
-    border-width: 10px;
-    border-style: solid;
-    border-color: #fff;
+
+    /* border */
+    border: 10px solid #ffff;
 }
 
 .hero__heading {
     font-size: 120px;
     margin-bottom: 24px;
     color: #fff;
+    text-align: center;
 }
 
 .hero__main_description {
@@ -124,6 +124,16 @@
     }
 }
 
+/* @media screen and (m-width: 1600px) {
+    .hero__heading {
+        font-size: 200px;
+    }
+
+    .hero__main_description {
+        font-size: 120px;
+    }
+} */
+
 .hero__button {
     font-size: 1.8rem;
     background: #00f260; /* fallback for old browsers */
@@ -139,15 +149,15 @@
     ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
     padding: 20px 60px;
-    /* border: solid #fff; */
+
     border: none;
-    border-radius: 25px; /*givingsomeslack*/
-    color: #fff;
+    border-radius: 25px;
+
     margin-top: 2rem;
+    margin-bottom: 2rem;
+
     cursor: pointer;
     position: relative;
-    transition: all 0.35s;
-    outline: none;
 }
 
 .hero__button a {
@@ -160,18 +170,16 @@
 .hero__button:after {
     position: absolute;
     content: "";
+
+    background: rgb(255, 174, 0);
     top: 0;
     left: 50%;
     right: 50%;
     width: 0;
     height: 100%;
-    background: rgb(255, 174, 0);
-    transition: all 0.3s;
     border-radius: 25px;
-}
 
-.hero__button:hover {
-    color: #fff;
+    transition: all 0.3s;
 }
 
 .hero__button:hover:after {
@@ -181,33 +189,24 @@
 }
 
 /* Footer Section */
+
 .footer__container {
     background-color: #131313;
-    padding-top: 10vh;
+
     padding: 4rem 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
 }
 
 .footer__container ul {
     display: flex;
-    padding: 0;
-    list-style: none;
-    text-align: center;
-    font-size: 18px;
-    line-height: 1.6;
-    margin-bottom: 0;
-    color: #fff;
-}
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1rem;
 
-.footer__container li {
-    padding: 0 10px;
+    list-style: none;
 }
 
 .footer__container ul a {
-    color: inherit;
+    color: #fff;
     text-decoration: none;
     opacity: 0.8;
 }
