--- a/styles.css
+++ b/styles.css
@@ -111,16 +111,6 @@
     color: #131313;
 }
 
-@media screen and (max-width: 768px) {
-    .hero__heading {
-        font-size: 80px;
-    }
-
-    .hero__main_description {
-        font-size: 25px;
-    }
-}
-
 .hero__button {
     font-size: 1.8rem;
     background: #b91d73; /* fallback for old browsers */
@@ -199,6 +189,9 @@
 /* Cards Section */
 .cards {
     background: rgb(255, 241, 210);
+
+    /*fix little white line appearing between svg and background here on firefox when zooming in or out*/
+    margin-top: -1px;
 }
 
 .cards__container {
@@ -208,9 +201,10 @@
     flex-direction: row;
     flex-wrap: wrap;
 
-    gap: 2rem;
-
+    align-items: center;
     justify-content: center;
+
+    gap: 5rem;
 }
 
 .card {
@@ -230,23 +224,55 @@
     ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
     padding: 0.5rem;
+
+    display: flex;
+
+    width: fit-content;
+    height: fit-content;
+
+    border-radius: 10%;
+
+    justify-content: center;
+
+    border: 3px solid saddlebrown;
 }
 
-.img_description {
-    /* TODO: FIX CENTER POSITION */
-    position: absolute;
-    bottom: 17%;
+.project_name {
+    font-size: 2rem;
 
-    text-align: center;
+    position: absolute;
+    /* half of font size to center */
+    bottom: calc(17.5% - 1rem);
 
     z-index: 1;
 
     visibility: hidden;
     opacity: 0;
     transition: opacity 0.3s, visibility 0.3s;
+
+    cursor: pointer;
 }
 
-.card:hover .img_description {
+.project_language {
+    font-size: 1.2rem;
+
+    position: absolute;
+    bottom: 25%;
+
+    z-index: 1;
+
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 0.3s, visibility 0.3s;
+
+    cursor: pointer;
+}
+
+.card:hover .project_name {
+    visibility: visible;
+    opacity: 1;
+}
+.card:hover .project_language {
     visibility: visible;
     opacity: 1;
 }
@@ -276,8 +302,10 @@
     width: 90%;
 }
 
+/* TODO MODIFY THESE */
+
 #bruh {
-    width: 100px;
+    width: 250px;
 }
 
 #bruh2 {
@@ -310,4 +338,26 @@
 .footer__container ul a:hover {
     color: #f37335;
     transition: 0.3 ease-out;
+}
+
+@media screen and (max-width: 768px) {
+    .hero__heading {
+        font-size: 80px;
+    }
+
+    .hero__main_description {
+        font-size: 25px;
+    }
+
+    .cards__container {
+        padding: 10rem 0 10rem 0;
+
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+
+        align-items: center;
+
+        gap: 1rem;
+    }
 }
