--- a/styles.css
+++ b/styles.css
@@ -154,7 +154,8 @@
     border-radius: 25px;
 
     margin-top: 2rem;
-    margin-bottom: 10rem;
+    margin-bottom: 10.5rem;
+    /* margin-bottom: 10%; */
 
     cursor: pointer;
     position: relative;
@@ -214,7 +215,7 @@
     background: rgb(255, 241, 210);
 
     /*fix little white line appearing between svg and background here on firefox when zooming in or out*/
-    margin-top: -1px;
+    margin-top: -2px;
 }
 
 .cards__container {
@@ -233,20 +234,10 @@
 .card {
     position: relative;
 
-    /* background-color: #ffae00; */
-    background: #ff5f6d; /* fallback for old browsers */
-    background: -webkit-linear-gradient(
-        to right,
-        #fcde9f,
-        #ffba5f
-    ); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(
-        to right,
-        #fcde9f,
-        #ffba5f
-    ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background-color: #17141d;
+    box-shadow: -1rem 0 3rem #000;
 
-    padding: 0.5rem;
+    padding: 1rem;
 
     display: flex;
 
@@ -257,7 +248,7 @@
 
     justify-content: center;
 
-    border: 3px solid saddlebrown;
+    transition: 0.4s ease-out; /* for hover*/
 }
 
 .project_name {
@@ -304,7 +295,7 @@
     position: absolute;
     content: "";
 
-    background: rgb(255, 236, 198);
+    background: #1a191b;
     bottom: 5%;
     left: 50%;
     right: 50%;
@@ -318,14 +309,62 @@
 }
 
 .card:hover:after {
-    /* visibility: visible; */
-    /* opacity: 1; */
     left: 5%;
     right: 5%;
     width: 90%;
 }
 
+@-webkit-keyframes rotating {
+    from{
+        -webkit-transform: rotate(0deg);
+    }
+    25%{
+        -webkit-transform: rotate(-5deg);
+    }
+    75%{
+        -webkit-transform: rotate(5deg);
+    }
+    to{
+        -webkit-transform: rotate(0deg);
+    }
+}
+
+.card:hover {
+    /* TODO INFINITE ROTATE OR SCALE? */
+    /* transform: translateY(-20px); */
+    /* -webkit-animation: rotating 1s linear infinite; */
+    transform: scale(1.10);
+    transition: 0.4s ease-out;
+}
+
 /* TODO MODIFY THESE */
+
+#glootdo {
+    background-image: url("/images/glootdo.png");
+    background-size: 350px 490px;
+    width: 350px;
+    height: 490px;
+}
+
+#quoridor {
+    border-radius: 10%;
+    width: 300px;
+    height: 420px;
+}
+
+#website {
+    border-radius: 10%;
+    width: 300px;
+    height: 420px;
+}
+
+.project_language {
+    color: rgb(255, 241, 210);
+}
+
+.project_name {
+    color: rgb(255, 241, 210);
+}
 
 #bruh {
     width: 250px;
