--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@
     ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
+/* TODO SEE IF WE KEEP THEM */
 #workingboy {
     visibility: var(--regularVisibility);
     position: absolute;
@@ -102,9 +103,9 @@
 
     width: 500px;
     height: 500px;
-    /* for mobile or if screen to narrow for 500px*/
-    max-width: 100vw;
-    max-height: 100vw;
+    /* for mobile or if screen to narrow for 500px (-20px to consider border size)*/
+    max-width: calc(100vw - 20px);
+    max-height: calc(100vw - 20px);
 
     /* leaving space on top of the image */
     margin-top: 20px;
@@ -213,7 +214,19 @@
 }
 
 /* Cards Section */
+
+.cards__heading {
+    color: #17141d;
+    font-size: 5vw;
+    margin-left: 10%;
+    padding-top: 3rem;
+
+    /* so it doesnt move the cards */
+    margin-bottom: -6rem;
+}
+
 .cards {
+
     background: rgb(255, 241, 210);
 
     /*fix little white line appearing between svg and background here on firefox when zooming in or out*/
@@ -230,7 +243,7 @@
     align-items: center;
     justify-content: center;
 
-    gap: 5rem;
+    gap: 4rem;
 }
 
 .card {
@@ -243,8 +256,10 @@
 
     display: flex;
 
-    width: fit-content;
-    height: fit-content;
+    /* width: fit-content;
+    height: fit-content; */
+
+    max-width: 80vw; /* Making sure images dont overflow when shrinking browser.*/
 
     border-radius: 10%;
 
@@ -339,24 +354,32 @@
     transition: 0.4s ease-out;
 }
 
-/* TODO MODIFY THESE */
-
 #glootdo {
     border-radius: 10%;
     width: 350px;
-    height: 490px;
+    height: auto;
+
+    max-width: 100%;
 }
 
 #quoridor {
     border-radius: 10%;
     width: 300px;
-    height: 420px;
+    height: auto;
+
+    max-width: 100%;
 }
 
 #website {
     border-radius: 10%;
     width: 300px;
-    height: 420px;
+    height: auto;
+
+    /* padding just to have the same size as the quoridor card */
+    padding-top: 20%;
+    padding-bottom: 20%;
+
+    max-width: 100%;
 }
 
 .project_language {
@@ -367,12 +390,24 @@
     color: rgb(255, 241, 210);
 }
 
+/* TODO MAKE MORE PROJECTS :P */
+
 #bruh {
+    border-radius: 10%;
     width: 250px;
+    height: auto;
+
+    max-width: 100%;
+    max-height: 100%;
 }
 
 #bruh2 {
+    border-radius: 10%;
     width: 500px;
+    height: auto;
+
+    max-width: 100%;
+    max-height: 100%;
 }
 
 /* Footer Section */
@@ -410,6 +445,10 @@
 
     .hero__main_description {
         font-size: 25px;
+    }
+
+    .cards__heading {
+        font-size: 10vw;
     }
 
     .cards__container {
