--- a/styles.css
+++ b/styles.css
@@ -637,7 +637,23 @@
         gap: 2rem;
     }
 
+    .job__container {
+        margin-left: 0;
+
+        display: flex;
+        flex-direction: column;
+
+        width: 100vw;
+
+        align-items: center;
+        justify-content: center;
+
+        border: 3px solid hotpink;
+    }
+
     .jobdescription__container {
+        margin-left: 0;
+
         margin-top: 2rem;
 
         background-color: #131313;
