--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,8 @@ html {
 
     --regularVisibility: visible;
     --animeVisibility: hidden;
+
+    --burgerMode: hidden;
 }
 
 .animemode {
@@ -45,35 +47,20 @@ html {
     ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-/* TODO SEE IF WE KEEP THEM */
-#workingboy {
-    visibility: var(--regularVisibility);
-    position: absolute;
-    width: 300px;
-    rotate: 10deg;
-    left: 70%;
-    top: 15%;
-}
-
-#starplatinum {
-    visibility: var(--animeVisibility);
-    position: absolute;
-    width: 225px;
-    left: 70%;
-    top: 15%;
-}
-
 /* Header */
 
-.header__container {
+nav {
+    position: relative;
+
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-    height: fit-content;
-    width: 100%;
+
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
 
-.header__container ul {
+nav ul {
     display: flex;
     flex-direction: row;
 
@@ -81,24 +68,26 @@ html {
     gap: 1rem;
     list-style: none;
 
-    margin-top: 10px;
-    margin-bottom: 5px;
-    margin-right: calc(50% - 500px);
+    height: 2rem;
 
     color: #fff;
 }
 
-.header__link {
+.nav__link {
     text-decoration: none;
     color: #fff;
 }
 
+.nav__link:hover {
+    color: #131313;
+}
+
 .animemode-toggle {
     background: var(--photoIcon);
-    background-size: 30px 30px;
+    background-size: 2rem 2rem;
 
-    width: 30px;
-    height: 30px;
+    width: 2rem;
+    height: 2rem;
 
     border-radius: 50%;
     border-width: 2px;
@@ -106,6 +95,36 @@ html {
     border-color: #fff;
 
     cursor: pointer;
+}
+
+#burger {
+    opacity: 0;
+
+    position: relative;
+
+    right: 10%;
+
+    transition: all 0.3s;
+
+    pointer-events: none;
+
+    display: flex;
+    flex-direction: column;
+    gap: 0.285rem;
+
+    margin: 0.285rem 0;
+}
+
+#burger:hover * {
+    background-color: var(--mainGradientRightColor);
+    transition: all 0.3s ease;
+}
+
+.line {
+    background-color: white;
+    width: 2rem;
+    height: 0.3rem;
+    border-radius: 0.1rem;
 }
 /* Headerend */
 
@@ -450,7 +469,7 @@ html {
     pointer-events: auto;
 }
 
-.card.hidden{
+.card.hidden {
     opacity: 0;
 
     pointer-events: none;
@@ -707,7 +726,7 @@ html {
 }
 
 /* Reactivity // Mobile */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1000px) {
     .hero__heading {
         font-size: 80px;
     }
@@ -779,7 +798,95 @@ html {
     .project_descriptions {
         font-size: 1.5rem;
     }
+
+    nav ul {
+        position: absolute;
+
+        display: flex;
+        flex-direction: column;
+
+        justify-content: center;
+
+        gap: 6.25vh;
+
+        width: 100%;
+        margin: 0;
+
+        height: 50vh;
+        transition: all 0.3s ease;
+
+        z-index: -1;
+
+        top: -50vh;
+
+        background: #17141d;
+
+        transition: all 0.3s ease;
+    }
+
+    nav ul.burgerActive {
+        background: #17141d;
+        opacity: 1;
+
+        top: 0%;
+
+        z-index: 10;
+
+        transition: all 0.3s ease;
+
+        font-size: 3vh;
+
+        transition: all 0.3s ease;
+    }
+
+    .animemode-toggle {
+        background: var(--photoIcon);
+        background-size: 8vh 8vh;
+
+        width: 8vh;
+        height: 8vh;
+    }
+
+    #burger {
+        position: absolute;
+        top: 0%;
+
+        cursor: pointer;
+
+        opacity: 1;
+
+        pointer-events: all;
+    }
+
+    #burger.active {
+        top: 2vh;
+        z-index: 11;
+    }
+
+    #burger.active :nth-child(1) {
+        transform: translateY(0.57rem) rotate(45deg);
+
+        transition: all 0.3s ease;
+    }
+
+    #burger.active :nth-child(2) {
+        opacity: 0;
+    }
+
+    #burger.active :nth-child(3) {
+        transform: translateY(-0.57rem) rotate(-45deg);
+
+        transition: all 0.3s ease;
+    }
+
+    .nav__link:hover {
+        color: var(--mainGradientRightColor);
+
+        transition: all 0.3s ease;
+    }
 }
+
+/* if screen bigger */
 
 @media screen and (min-width: 2500px) {
     .job__container {
@@ -804,7 +911,5 @@ html {
 
     #ulaval {
         width: 16vw;
-        /* justify-content: right; */
-        /* align-items: flex-end; */
     }
 }
