--- a/styles.css
+++ b/styles.css
@@ -796,9 +796,28 @@ nav ul {
     .cards_description__container {
         top: 15%;
         height: 70%;
+
+        display: flex;
+
+        align-items: center;
+        justify-content: center;
     }
+
+    .img_desc {
+        border-radius: 10%;
+
+        margin: 0 auto;
+
+        width: 80%;
+    }
+
+    .testvideo {
+        width: 80%;
+        height: auto;
+    }
+
     .project_descriptions {
-        font-size: 1.5rem;
+        font-size: 1.2rem;
     }
 
     nav ul {
